--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -11,16 +11,16 @@ $small-p-size: 16px;
     flex-direction: column;
 }
 
-
 .about {
     @include flex;
     background-color: #3D84A8;
     height: 340vw;
     overflow-x: hidden;
+    overflow-y: hidden;
 
     .about__container {
         @include flex;
-        height: 320vw;
+        height: 340vw;
 
         .about__p {
             width: 80%;
