--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -20,6 +20,7 @@ $small-p-size: 16px;
     background-size: cover;
     height: 190vw;
     overflow-x: hidden;
+    overflow-y: hidden;
 
     .home__bg {
         background-color: rgba(72, 70, 109, 0.75);
